--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <div class="line"></div>
     <div class="info">
       Coming soon:<br>
-      JB&amp;K math, English, and Bible learning content.<br>
-      Contact: info@jbk.com
+      JBPASS; Math, English, and learning content.<br>
+      Contact: jbpass.bw@outlook.com
     </div>
   </div>
 </body>
