--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
+<link rel="icon" href="/jbk_favicon.png">
+
 <head>
   <meta charset="UTF-8">
   <title>JB&K | Ideal to Real</title>
@@ -15,34 +17,40 @@
       justify-content: center;
       min-height: 100vh;
     }
+
     .card {
       padding: 32px 40px;
       border-radius: 18px;
       background: #111827;
-      box-shadow: 0 16px 40px rgba(0,0,0,0.5);
+      box-shadow: 0 16px 40px rgba(0, 0, 0, 0.5);
       border: 1px solid #1F2937;
       max-width: 420px;
       width: 100%;
     }
+
     .logo {
       font-size: 28px;
       font-weight: 700;
       letter-spacing: 0.12em;
     }
+
     .logo span {
       color: #F97316;
     }
+
     .subtitle {
       margin-top: 8px;
       color: #9CA3AF;
       font-size: 14px;
     }
+
     .line {
       margin: 20px 0;
       height: 1px;
       background: linear-gradient(to right, #1E3A8A, #5B21B6);
       opacity: 0.7;
     }
+
     .info {
       font-size: 14px;
       line-height: 1.6;
@@ -55,24 +63,35 @@
       padding-top: 20px;
       border-top: 1px dashed #374151;
     }
+
     .jbpass-logo {
       font-family: Impact, Arial Black, sans-serif;
       font-size: 36px;
       letter-spacing: 0.08em;
       margin-bottom: 6px;
     }
+
     .jb {
-      color: #f09d2e; /* JB color */
+      color: #f09d2e;
+      /* JB color */
     }
+
     .pass {
-      color: #FFFFFF; /* PASS color */
+      color: #FFFFFF;
+      /* PASS color */
     }
+
     .jbpass-domain {
       font-size: 13px;
       color: #9CA3AF;
     }
+
+    a {
+      text-decoration: none;
+    }
   </style>
 </head>
+
 <body>
   <div class="card">
     <div class="logo">JB&amp;K<span>.</span></div>
@@ -80,17 +99,19 @@
     <div class="line"></div>
     <div class="info">
       Coming soon:<br>
-      JBPASS; Math, English, and learning content.<br>
-      Contact: <a href="mailto:jbpass.bw@outlook.com" style="color:#F9FAFB; text-decoration:underline;">jbpass.bw@outlook.com</a>
+      ROSH Math, English, and learning content.<br>
+      Contact: <a href="mailto:jbpass.bw@outlook.com"
+        style="color:#F9FAFB; text-decoration:underline;">jbpass.bw@outlook.com</a>
     </div>
 
     <!-- JBPASS Brand Added -->
     <div class="jbpass-wrap">
-      <div class="jbpass-logo">
-        <span class="jb">JB</span><span class="pass">PASS</span>
+      <div class="jbpass-logo"><a href="https://www.jbpass.co.kr" target="_blank" rel="noopener noreferrer">
+          <span class="jb">JB</span><span class="pass">PASS</span>
       </div>
-      <div class="jbpass-domain"><a href="https://www.jbpass.co.kr" target="_blank" rel="noopener noreferrer" style="color:#9CA3AF; text-decoration:underline;">https://www.jbpass.co.kr</a></div>
+
     </div>
   </div>
 </body>
+
 </html>
