--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
-<link rel="icon" href="/jbk_favicon.png">
+<link rel="icon" type="image/png" href="/jbk_favicon.png">
 
 <head>
   <meta charset="UTF-8">
