--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JB&K | Ideal to Real</title>
+  <link rel="icon" type="image/png" href="/jbk_favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Impact&display=swap" rel="stylesheet">
   <style>
     body {
