--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
-<link rel="icon" type="image/png" href="/jbk_favicon.png">
 
 <head>
   <meta charset="UTF-8">
   <title>JB&K | Ideal to Real</title>
-  <link rel="icon" type="image/png" href="/jbk_favicon.png">
+  <link rel="icon" type="image/png" href="jbk_favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Impact&display=swap" rel="stylesheet">
   <style>
     body {
