--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>JB&K | Ideal to Real</title>
   <link rel="icon" type="image/png" href="jbk_favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Impact&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
@@ -65,7 +67,7 @@
     }
 
     .jbpass-logo {
-      font-family: Impact, Arial Black, sans-serif;
+      font-family: 'Anton', Impact, Arial Black, sans-serif;
       font-size: 36px;
       letter-spacing: 0.08em;
       margin-bottom: 6px;
